force-save=true

--- a/extra/win32/x64/engine/aria2.conf
+++ b/extra/win32/x64/engine/aria2.conf
@@ -26,7 +26,7 @@ file-allocation=falloc
 no-file-allocation-limit=64M
 # Save error/unfinished downloads to a file specified by --save-session option every SEC seconds.
 save-session-interval=10
-
+force-save=true
 
 ################ Task ################
 # Exclude seed only downloads when counting concurrent active downloads
