--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "imFile",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "A full-featured download manager",
   "homepage": "https://imfile.io",
   "author": {
@@ -17,8 +17,8 @@
   "scripts": {
     "release": "npm run build --publish onTagOrDraft",
     "build": "node .electron-vue/build.js && electron-builder",
-    "build:win7": "node .electron-vue/build.js && electron-builder --win --config.directories.output=release/win32/7",
-    "build:win10": "node .electron-vue/build.js && electron-builder --win --config.directories.output=release/win32/10",
+    "build:win7": "pnpm up electron@22 && node .electron-vue/build.js && electron-builder --win --config.directories.output=release/win32/7",
+    "build:win10": "pnpm up electron@25 && node .electron-vue/build.js && electron-builder --win --config.directories.output=release/win32/10",
     "build:applesilicon": "node .electron-vue/build.js && electron-builder --arm64 --mac",
     "build:github": "node .electron-vue/build.js",
     "build:dir": "node .electron-vue/build.js && electron-builder --dir",
@@ -69,7 +69,7 @@
     "css-loader": "^6.7.3",
     "css-minimizer-webpack-plugin": "^5.0.0",
     "del": "^6.1.1",
-    "electron": "^25.2.0",
+    "electron": "^22.3.14",
     "electron-builder": "^24.4.0",
     "electron-devtools-installer": "^3.2.0",
     "electron-is": "^3.0.0",
