--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "postinstall": "electron-builder install-app-deps && npm run lint:fix"
   },
   "engines": {
-    "node" : ">=16.0.0"
+    "node": ">=16.0.0"
   },
   "dependencies": {
     "node-fetch": "^2.6.1",
@@ -67,7 +67,7 @@
     "css-loader": "^6.7.3",
     "css-minimizer-webpack-plugin": "^5.0.0",
     "del": "^6.1.1",
-    "electron": "^22.3.7",
+    "electron": "22.3.27",
     "electron-builder": "^24.3.0",
     "electron-devtools-installer": "^3.2.0",
     "electron-is": "^3.0.0",
@@ -110,5 +110,10 @@
     "webpack-hot-middleware": "^2.25.3",
     "webpack-merge": "^5.8.0",
     "worker-loader": "^3.0.8"
+  },
+  "pnpm": {
+    "overrides": {
+      "7zip-bin": "5.1.1"
+    }
   }
 }
