--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -43,7 +43,7 @@ jobs:
         run: snapcraft --help
 
       - name: Build/release Electron app
-        uses: chenjia404/action-electron-builder@main
+        uses: chenjia404/action-electron-builder@v0
         with:
           build_script_name: 'build:github'
           # GitHub token, automatically provided to the action
