--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -43,24 +43,12 @@ jobs:
       #   run: snapcraft --help
 
       - name: Build/release Electron app
-        uses: chenjia404/action-electron-builder@v0.0.4
+        uses: uses: paneron/action-electron-builder@v1.8.1
         with:
-          build_script_name: 'build:github'
           # GitHub token, automatically provided to the action
           # (No need to define this secret in the repo settings)
           github_token: ${{ secrets.github_token }}
 
-          # macOS code signing certificate
-          mac_certs: ${{ secrets.mac_certs }}
-          mac_certs_password: ${{ secrets.mac_certs_password }}
-
           # If the commit is tagged with a version (e.g. "v1.0.0"),
           # release the app after building
-          release: ${{ vars.skip_publish != 'true' }}
-        env:
-          # Snapcraft
-          SNAPCRAFT_STORE_CREDENTIALS: ${{ secrets.snapcraft_token }}
-          # macOS notarization
-          TEAM_ID: ${{ secrets.team_id }}
-          APPLE_ID: ${{ secrets.apple_id }}
-          APPLE_APP_SPECIFIC_PASSWORD: ${{ secrets.apple_app_specific_password }}
+          release: ${{ startsWith(github.ref, 'refs/tags/v') }}
