--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -43,7 +43,7 @@ jobs:
       #   run: snapcraft --help
 
       - name: Build/release Electron app
-        uses: uses: paneron/action-electron-builder@v1.8.1
+        uses: paneron/action-electron-builder@v1.8.1
         with:
           # GitHub token, automatically provided to the action
           # (No need to define this secret in the repo settings)
