--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,49 +1,28 @@
 name: Build/release
 
-on:
-  push:
-    branches: [ master ]
-  pull_request:
-    branches: [ master ]
+on: push
 
 jobs:
-  release:
-    runs-on: ${{ matrix.os }}
-
-    # Platforms to build on/for
-    strategy:
-      matrix:
-        os: [macos-latest, ubuntu-latest, windows-latest]
-
+  release-linux:
+    runs-on: ubuntu-latest
     steps:
       - name: Check out Git repository
-        uses: actions/checkout@v4
+        uses: actions/checkout@v2
 
-      
-      - uses: pnpm/action-setup@v2
-        with:
-          version: 6.32.9
+      - name: rpm
+        run: |
+          sudo apt update 1>&2
+          sudo apt install --install-recommends rpm -y 1>&2
 
       - name: Install Node.js, NPM and Yarn
-        uses: actions/setup-node@v4
+        uses: actions/setup-node@v1
         with:
           node-version: 18
-          cache: 'pnpm'
-
-      # - name: Install Snapcraft
-      #   uses: samuelmeuli/action-snapcraft@v2
-      #   # Only install Snapcraft on Ubuntu
-      #   if: startsWith(matrix.os, 'ubuntu')
-      #   env:
-      #     # Snapcraft
-      #     SNAPCRAFT_STORE_CREDENTIALS: ${{ secrets.snapcraft_token }}
-
-      # - name: Test Snapcraft
-      #   if: startsWith(matrix.os, 'ubuntu')
-      #   run: snapcraft --help
+      - run: yarn install --network-timeout 100000
+      - run: yarn prod
 
       - name: Build/release Electron app
-        uses: paneron/action-electron-builder@v1.8.1
+        uses: samuelmeuli/action-electron-builder@v1
         with:
           # GitHub token, automatically provided to the action
           # (No need to define this secret in the repo settings)
@@ -52,3 +31,57 @@ jobs:
           # If the commit is tagged with a version (e.g. "v1.0.0"),
           # release the app after building
           release: ${{ startsWith(github.ref, 'refs/tags/v') }}
+        env:
+          USE_HARD_LINKS: false
+
+  release-macos:
+    runs-on: macos-latest
+    steps:
+      - name: Check out Git repository
+        uses: actions/checkout@v2
+
+      - name: Install Node.js, NPM and Yarn
+        uses: actions/setup-node@v1
+        with:
+          node-version: 18
+      - run: yarn install --network-timeout 100000
+      - run: yarn prod
+
+      - name: Build/release Electron app
+        uses: samuelmeuli/action-electron-builder@v1
+        with:
+          # GitHub token, automatically provided to the action
+          # (No need to define this secret in the repo settings)
+          github_token: ${{ secrets.github_token }}
+
+          # If the commit is tagged with a version (e.g. "v1.0.0"),
+          # release the app after building
+          release: ${{ startsWith(github.ref, 'refs/tags/v') }}
+        env:
+          USE_HARD_LINKS: false
+
+  release-windows:
+    runs-on: windows-latest
+    steps:
+      - name: Check out Git repository
+        uses: actions/checkout@v2
+
+      - name: Install Node.js, NPM and Yarn
+        uses: actions/setup-node@v1
+        with:
+          node-version: 18
+      - run: yarn install --network-timeout 100000
+      - run: yarn prod
+
+      - name: Build/release Electron app
+        uses: samuelmeuli/action-electron-builder@v1
+        with:
+          # GitHub token, automatically provided to the action
+          # (No need to define this secret in the repo settings)
+          github_token: ${{ secrets.github_token }}
+
+          # If the commit is tagged with a version (e.g. "v1.0.0"),
+          # release the app after building
+          release: ${{ startsWith(github.ref, 'refs/tags/v') }}
+        env:
+          USE_HARD_LINKS: false
