--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.24.4",
+    "@babel/eslint-parser": "^7.11.0",
     "@babel/plugin-proposal-class-properties": "^7.18.6",
     "@babel/plugin-transform-runtime": "^7.21.4",
     "@babel/preset-env": "^7.21.5",
@@ -57,7 +58,6 @@
     "@vue/eslint-config-standard": "^6.1.0",
     "ajv": "^8.12.0",
     "axios": "^1.6.8",
-    "@babel/eslint-parser": "^7.11.0",
     "babel-loader": "^9.1.2",
     "babel-plugin-component": "^1.1.1",
     "bittorrent-peerid": "^1.3.6",
@@ -81,6 +81,7 @@
     "eslint-friendly-formatter": "^4.0.1",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-n": "^14.0.0",
+    "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-vue": "^9.12.0",
     "eslint-webpack-plugin": "^4.0.1",
