--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -19,20 +19,10 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: 18
-      - run: yarn install --network-timeout 100000
-
-      - name: Build/release Electron app
-        uses: samuelmeuli/action-electron-builder@v1
-        with:
-          # GitHub token, automatically provided to the action
-          # (No need to define this secret in the repo settings)
           github_token: ${{ secrets.github_token }}
 
-          # If the commit is tagged with a version (e.g. "v1.0.0"),
-          # release the app after building
-          release: ${{ startsWith(github.ref, 'refs/tags/v') }}
-        env:
-          USE_HARD_LINKS: false
+      - run: yarn install --network-timeout 100000
+      - run: yarn run build
 
   release-macos:
     runs-on: macos-latest
@@ -45,20 +35,10 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: 18
-      - run: yarn install --network-timeout 100000
-
-      - name: Build/release Electron app
-        uses: samuelmeuli/action-electron-builder@v1
-        with:
-          # GitHub token, automatically provided to the action
-          # (No need to define this secret in the repo settings)
           github_token: ${{ secrets.github_token }}
 
-          # If the commit is tagged with a version (e.g. "v1.0.0"),
-          # release the app after building
-          release: ${{ startsWith(github.ref, 'refs/tags/v') }}
-        env:
-          USE_HARD_LINKS: false
+      - run: yarn install --network-timeout 100000
+      - run: yarn run build
 
   release-windows:
     runs-on: windows-latest
@@ -73,18 +53,7 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: 18
-      - run: yarn install --network-timeout 100000
-
-      - name: Build/release Electron app
-        uses: samuelmeuli/action-electron-builder@v1
-        with:
-          # GitHub token, automatically provided to the action
-          # (No need to define this secret in the repo settings)
-          GH_TOKEN: ${{ secrets.github_token }}
           github_token: ${{ secrets.github_token }}
 
-          # If the commit is tagged with a version (e.g. "v1.0.0"),
-          # release the app after building
-          release: ${{ startsWith(github.ref, 'refs/tags/v') }}
-        env:
-          USE_HARD_LINKS: false
+      - run: yarn install --network-timeout 100000
+      - run: yarn run build
