--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -10,6 +10,21 @@ jobs:
       - name: Check out Git repository
         uses: actions/checkout@v2
 
+
+      - name: Cache node modules
+        id: cache-npm
+        uses: actions/cache@v3
+        env:
+          cache-name: cache-node-modules
+        with:
+          # npm cache files are stored in `~/.npm` on Linux/macOS
+          path: ~/.npm
+          key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-build-${{ env.cache-name }}-
+            ${{ runner.os }}-build-
+            ${{ runner.os }}-
+
       - name: rpm
         run: |
           sudo apt update 1>&2
@@ -19,6 +34,7 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: 18
+          gh_token: ${{ secrets.github_token }}
           github_token: ${{ secrets.github_token }}
 
       - run: yarn install --network-timeout 100000
@@ -31,10 +47,26 @@ jobs:
       - name: Check out Git repository
         uses: actions/checkout@v2
 
+
+      - name: Cache node modules
+        id: cache-npm
+        uses: actions/cache@v3
+        env:
+          cache-name: cache-node-modules
+        with:
+          # npm cache files are stored in `~/.npm` on Linux/macOS
+          path: ~/.npm
+          key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-build-${{ env.cache-name }}-
+            ${{ runner.os }}-build-
+            ${{ runner.os }}-
+
       - name: Install Node.js, NPM and Yarn
         uses: actions/setup-node@v1
         with:
           node-version: 18
+          gh_token: ${{ secrets.github_token }}
           github_token: ${{ secrets.github_token }}
 
       - run: yarn install --network-timeout 100000
@@ -49,10 +81,26 @@ jobs:
         with:
           fetch-depth: 0
 
+
+      - name: Cache node modules
+        id: cache-npm
+        uses: actions/cache@v3
+        env:
+          cache-name: cache-node-modules
+        with:
+          # npm cache files are stored in `~/.npm` on Linux/macOS
+          path: ~/.npm
+          key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-build-${{ env.cache-name }}-
+            ${{ runner.os }}-build-
+            ${{ runner.os }}-
+
       - name: Install Node.js, NPM and Yarn
         uses: actions/setup-node@v1
         with:
           node-version: 18
+          gh_token: ${{ secrets.github_token }}
           github_token: ${{ secrets.github_token }}
 
       - run: yarn install --network-timeout 100000
