--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "release": "node .electron-vue/build.js && electron-builder --publish onTagOrDraft",
     "build": "node .electron-vue/build.js && electron-builder",
     "build:win7": "pnpm up electron@22 && node .electron-vue/build.js && electron-builder --win --config.directories.output=release/win32/7",
-    "build:win10": "pnpm up electron@30 && node .electron-vue/build.js && electron-builder --win --config.directories.output=release/win32/10",
+    "build:win10": "node .electron-vue/build.js && electron-builder --win --config.directories.output=release/win32/10",
     "build:applesilicon": "node .electron-vue/build.js && electron-builder --arm64 --mac",
     "build:github": "node .electron-vue/build.js",
     "build:dir": "node .electron-vue/build.js && electron-builder --dir",
@@ -63,7 +63,7 @@
     "bittorrent-peerid": "^1.3.6",
     "blob-util": "^2.0.2",
     "cfonts": "^3.2.0",
-    "chalk": "^5.0.0",
+    "chalk": "4.1.2",
     "copy-webpack-plugin": "^11.0.0",
     "cross-env": "^7.0.3",
     "css-loader": "^6.7.3",
