--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -7,8 +7,8 @@ jobs:
     runs-on: ubuntu-latest
     environment: release
     env:
-      gh_token: ${{ secrets.gh_token }}
-      github_token: ${{ secrets.gh_token }}
+      GH_TOKEN: ${{ secrets.gh_token }}
+      GITHUB_TOKEN: ${{ secrets.gh_token }}
     steps:
       - name: Check out Git repository
         uses: actions/checkout@v4
@@ -48,8 +48,8 @@ jobs:
       contents: write
     environment: release
     env:
-      gh_token: ${{ secrets.GITHUB_TOKEN }}
-      github_token: ${{ secrets.GITHUB_TOKEN }}
+      GH_TOKEN: ${{ secrets.gh_token }}
+      GITHUB_TOKEN: ${{ secrets.gh_token }}
     steps:
       - name: Check out Git repository
         uses: actions/checkout@v4
